# dotfiles

./: .gitignore  .gitmodules  .luacheckrc  Dockerfile  README.md  applist.txt  co.vim  install.sh  latexmkrc  list.txt  p10k.zsh  setup.sh  starship.toml  tmux.conf  vimrc
.github/workflows/: nvim-lua-lint.yml
compton/: picom.conf
desktop/i3/: i3blocks_bottom.conf  i3blocks_up.conf
desktop/rofi/: rofi_system.sh
desktop/terminator/: config
i3/: config  config.endeavoros  i3blocks.conf  i3blocks_up.conf
i3/brightness/: brightness.sh
i3/scripts/: activewindow.sh  discord_runorraise.sh  mybattery.sh  mycpu.sh  myssid.sh  myvolume.py
lang/node/: install_nvm.sh
lang/python/: install_uv.sh
lang/python/pwn/: pyproject.toml  setup_pwn_env.sh
nvim/: PLUGIN_NOTES.md  coc-settings.json  init.lua  init.vim  list.txt
nvim/colors/: list.txt
nvim/ftplugin/: rust.lua  rust.vim
nvim/lua/: keymaps.lua  options.lua  textobjects.lua
nvim/plugins/: LanguageClient-neovim.rc.vim  airline.rc.vim  coc.rc.vim  denite.rc.vim  deoplete.rc.vim  easymotion.rc.vim  fzf.rc.vim  indentLine.rc.vim  lexima.rc.vim  neosnippet.rc.vim  nvim-cmp.rc.vim  rainbow_parentheses.rc.vim  tagbar.rc.vim  toggleterm.rc.vim  tree-sitter.rc.vim  vim-racer.rc.vim
nvim/rc/: keymappings.rc.vim  luaoptions.rc.vim  myTextObjects.rc.vim  options.rc.vim  plug.rc.vim
nvim/snippets/: tex.snip  tex.snippets
nvim/tests/: check.sh
picom/: picom.conf
prezto/runcoms/: myzshrc  zpreztorc  zshrc
rofi/: config  config.rasi  rofi_system.sh
shell/zsh/: zshrc
terminator/: config
(+38 files in other folders)
