[project]
name = "pwn-env"
version = "0.1.0"
description = "CTF pwn challenge environment managed by uv"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pwntools>=4.13",
    "ptrlib>=2.0",
    "ropper>=1.13",
    "capstone>=5.0",
    "unicorn>=2.0",
    "z3-solver>=4.13",
    "pycryptodome>=3.20",
    "requests>=2.32",
    "setuptools<81",  # unicorn imports pkg_resources, removed in setuptools>=81
]

[tool.uv]
package = false
